# cleanrr

./: .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.claude/: PHASE_4.3_SPEC.md  settings.json
.claude/agents/: cleanrr-builder.md  cleanrr-reviewer.md  cleanrr-security.md
.claude/commands/: cleanrr-audit.md  cleanrr-ship.md
.claude/rules/: changelog.md  commit-style.md  python-style.md  secrets-and-auth.md  spec-quality.md  sqlite.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
assets/grafana/: cleanrr.json
assets/logo/: README.md
cleanrr/: __init__.py  __main__.py  agent.py  bot.py  config.py  handlers.py  identity.py  metrics.py  permissions.py
cleanrr/permissions/: __init__.py  _callback.py  _formatters.py  _registry.py
cleanrr/tools/: _context.py  _qbittorrent_auth.py  _results.py  _status_label.py  _user_request.py  overseerr.py  overseerr_write.py  qbittorrent.py  qbittorrent_write.py  radarr.py  radarr_write.py  sonarr.py  sonarr_write.py
tests/: test_agent.py  test_bot.py  test_config.py  test_consistency.py  test_identity.py  test_metrics.py  test_permissions.py  test_qbittorrent_auth.py  test_tools_context.py  test_tools_overseerr.py  test_tools_overseerr_write.py  test_tools_qbittorrent.py  test_tools_qbittorrent_write.py  test_tools_radarr.py  test_tools_radarr_write.py  test_tools_sonarr.py  test_tools_sonarr_write.py  test_user_request.py  test_user_request_render.py
