[project]
name = "cleanrr"
version = "0.1.0"
description = "Telegram bot for self-service homelab media management (Sonarr / Radarr / Overseerr / qBittorrent)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]>=22.7,<23",
    "pydantic-settings>=2.14,<3",
    "claude-agent-sdk>=0.2.82,<0.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=4.0.1",
]

[project.scripts]
cleanrr = "cleanrr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cleanrr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.pyright]
include = ["cleanrr", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
