[project]
name = "cleanrr"
dynamic = ["version"]
description = "Telegram bot for self-service homelab media management (Sonarr / Radarr / Overseerr / qBittorrent)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]>=22.7,<23",
    "pydantic-settings>=2.14,<3",
    "claude-agent-sdk>=0.2.82,<0.3",
    "aiosqlite>=0.20,<0.23",
    "prometheus-client>=0.21,<0.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "bandit>=1.8",
    "pre-commit>=4.0.1",
]

[project.scripts]
cleanrr = "cleanrr.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["cleanrr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate (commented-out code)
    "RET", # flake8-return
    "PIE", # flake8-pie
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# python-telegram-bot handlers have a framework-mandated signature
# (`update`, `context`); `context` is often unused.
"cleanrr/handlers.py" = ["ARG001"]

[tool.pyright]
include = ["cleanrr", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cleanrr"]
omit = ["cleanrr/__main__.py", "cleanrr/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
    "raise NotImplementedError",
]
